force-app/main/default/objects/DM_Storage__c/DM_Storage__c.object-meta.xml
<CustomObject>
    <label>Storage</label>
    <nameField>
        <label>Storage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>