force-app/main/default/objects/DM_Storage__c/fields/DM_Active__c.field-meta.xml
<CustomField>
    <fullName>DM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>