force-app/main/default/objects/DM_Storage__c/fields/DM_Capacity__c.field-meta.xml
<CustomField>
    <fullName>DM_Capacity__c</fullName>
    <label>Capacity (cubic ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>