force-app/main/default/objects/DM_Storage__c/fields/DM_Cross_Contamination_Prevention__c.field-meta.xml
<CustomField>
    <fullName>DM_Cross_Contamination_Prevention__c</fullName>
    <label>Cross-Contamination Prevention Measures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Barriers</fullName>
            </value>
            <value>
                <fullName>Cleaning Procedures</fullName>
            </value>
            <value>
                <fullName>Dedicated Storage Bins</fullName>
            </value>
            <value>
                <fullName>Dedicated Equipment for Organic</fullName>
            </value>
            <value>
                <fullName>Buffer Zones</fullName>
            </value>
            <value>
                <fullName>Residue Testing &amp; Monitoring</fullName>
            </value>
            <value>
                <fullName>Employee Training</fullName>
            </value>
            <value>
                <fullName>Pest Control with Organic-Compliant Methods</fullName>
            </value>
            <value>
                <fullName>Sealed &amp; Traceable Packaging</fullName>
            </value>
            <value>
                <fullName>Transportation &amp; Handling Segregation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>