force-app/main/default/objects/DM_Storage__c/fields/DM_Humidity__c.field-meta.xml
<CustomField>
    <fullName>DM_Humidity__c</fullName>
    <label>Inside Humidity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>