force-app/main/default/objects/DM_Storage__c/fields/DM_Inside_Temperature__c.field-meta.xml
<CustomField>
    <fullName>DM_Inside_Temperature__c</fullName>
    <label>Inside Temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>