force-app/main/default/objects/DM_Storage__c/fields/DM_Organic_Non_Organic_Separation__c.field-meta.xml
<CustomField>
    <fullName>DM_Organic_Non_Organic_Separation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organic &amp; Non-Organic Separation</label>
    <type>Checkbox</type>
</CustomField>