force-app/main/default/objects/DM_Storage__c/fields/DM_Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Storage_Type__c</fullName>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Storage</fullName>
            </value>
            <value>
                <fullName>Dry Storage</fullName>
            </value>
            <value>
                <fullName>Root Cellar</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Silo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>