force-app/main/default/objects/DM_Storage__c/recordTypes/DM_Storage.recordType-meta.xml
<RecordType>
    <fullName>DM_Storage</fullName>
    <active>true</active>
    <description>Default record type for storage locations.</description>
    <label>Storage</label>
</RecordType>