force-app/main/default/objects/DM_Storage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Storage_Type__c</columns>
    <columns>digitalm__DM_Address__Street__s</columns>
    <columns>DM_Capacity__c</columns>
    <columns>DM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>